--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WanderGo</string>
+    <string name="app_name">Travel_App</string>
     <string name="description">Srimangal is a small hill town located in the Sylhet
                 Division of Bangladesh, known for its picturesque tea gardens and
                 natural beauty. The town is situated in the midst of the beautiful tea gardens of the
